AC_INIT([wmpmixer], [0.1], [dtorrance@piedmont.edu])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([configure.ac])
AC_PROG_CC
PKG_CHECK_MODULES([DOCKAPP], [dockapp])
PKG_CHECK_MODULES([PULSE], [libpulse])
PKG_CHECK_MODULES([WRLIB], [wrlib])
PKG_CHECK_MODULES([X11], [x11])
PKG_CHECK_MODULES([XEXT], [xext])
PKG_CHECK_MODULES([GTK], [gtk+-3.0])
PKG_CHECK_MODULES([WINGS], [WINGs])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
